--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@ li {
     <div  id="outer">
                           <div id="container">
                             
-                            <img src="https://dl.dropboxusercontent.com/u/5225800/jh/cheatsheets-squeeze.jpg" width="350" height="332" align="right" />
+                            <img src="images/squeeze.png" width="350" height="332" align="right" />
                             <br />
                             
 
