--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@ li {
                             <br />
                             
 
-                            <p style="font-family:georgia;font-size:35px;font-weight:bold;"><img src="https://dl.dropboxusercontent.com/u/5225800/jh/cheathead.jpg" width="440" height="222" /></p>
+                            <p style="font-family:georgia;font-size:35px;font-weight:bold;"><img src="images/6011522c9f3cd0377885c807.png" width="440" height="" /></p>
                            
                             <div class="text_bottom_wrap">
                               <div class="text_bottom">
