--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@ li {
                     <table class="longoptin" style="height: 40px;" cellpadding="0" cellspacing="15" align="center"> 
                     <tbody> 
                     <tr valign="middle"> 
-                      <td style="width: 220px;"><img alt="as" src="https://dl.dropboxusercontent.com/u/5225800/jh/as2.png" height="38" width="250"></td> 
+                      <td style="width: 220px;"><img alt="as" src="" height="38" width="250"></td> 
                       <td style="width: 270px;"> 
     
  <input class="style15" name="email" id="Contact0Email" style="width: 90%; height: 35px;text-align:center;" onClick="this.value='';" value="Enter Your Email Address Here" ></td> 
