--- a/index.html
+++ b/index.html
@@ -99,6 +99,7 @@ background-color:transparent;
 
 .longoptin {
 	BORDER-BOTTOM: #808000 2px solid; BORDER-LEFT: #808000 2px solid; BACKGROUND-COLOR: #ffffcc; BORDER-TOP: #808000 2px solid; BORDER-RIGHT: #808000 2px solid; margin: 0 auto;
+background: linear-gradient(0deg, rgba(34,193,195,1) 0%, rgba(69,7,246,1) 100%);
 }
 .style15 {
 	BORDER-BOTTOM: #808000 3px solid; BORDER-LEFT: #808000 3px solid; BACKGROUND-COLOR: #ffffff; BORDER-TOP: #808000 3px solid; BORDER-RIGHT: #808000 3px solid;
