--- a/index.html
+++ b/index.html
@@ -53,8 +53,11 @@ body {
 	margin: 0;
 }
 #btmimg {
-	height: 20px;
-	background-image: url(https://dl.dropboxusercontent.com/u/5225800/jh/mainbottom.png);
+	height: 40px;
+	background-image: url(images/button_get-it-now.png
+
+
+);
 	background-repeat: no-repeat;
 	background-position: center top;
 }
