--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@ body {
 }
 #btmimg {
 	height: 40px;
-	background-image: url(images/button_get-it-now.png
+	background-image: url(images/button_get-it-now.png);
 
 
 );
