--- a/index.html
+++ b/index.html
@@ -53,7 +53,8 @@ body {
 	margin: 0;
 }
 #btmimg {
-	height: 40px;
+	height: 41px;
+        width:150px;
 	background-image: url(images/button_get-it-now.png);
 
 
