--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@ body {
 	background-position: center top;
 }
 
+h1 {color:#9c0b2a;font-size:18px;}
+
 #topdecor {
 	background-repeat: repeat-x;
 	width: 1100px;
