--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@ li {
                               
                               <p style="font-size:24px;">
                                 <br />
-<strong>The Ultimate Trading Shortcut?</strong></p>
+<h1>The Ultimate Trading Shortcut?</h1>
 <p>My name is Jason Fielder, and the five (5) &quot;cheat sheets&quot; I have assembled will put the odds back in your favor and give you the control you need to pull short-term profits out of the Forex.</p>
                               <p>Here's what you'll get when you download these &quot;Cheat Sheets&quot;:</p>
                               <ul>
