--- a/index.html
+++ b/index.html
@@ -195,7 +195,8 @@ li {
 <h1>You Will be Able to Find ANY File on Your PC Instantly!
 </h1>
 <p>My name is Jason Fielder, and the five (5) &quot;cheat sheets&quot; I have assembled will put the odds back in your favor and give you the control you need to pull short-term profits out of the Forex.</p>
-                              <p>Here's what you'll get when you download these &quot;Cheat Sheets&quot;:</p>
+                              
+<h1>Show You How to Organize Your Files the Same Way You Organize Your Thoughts</h1>
                               <ul>
                                 <li>                                 Five (5) non-traditional strategies you use to<strong> snipe pips out of the Forex markets</strong> (in any market condition)...</li>
                                 <li> The best times to scalp the markets (HINT: It's NOT when you think) and the times to avoid...</li>
