--- a/index.html
+++ b/index.html
@@ -292,7 +292,7 @@
             <a class="text-gray-600 hover:text-gray-800">Third Link</a>
           </li>
           <li>
-            <a class="text-gray-600 hover:text-gray-800">Fourth Link</a>
+            <a href="https://cawp.rutgers.edu/facts/milestones-for-women" class="text-gray-600 hover:text-gray-800">Milestones for Women in American Politics</a>
           </li>
         </nav>
       </div>
